[package]
name = "sled-vs-rocksdb"
version = "0.1.0"
authors = ["Pedro Bittencorut Arruda <pedrobittencourt@yahoo.com.br>"]
edition = "2018"

[profile.release]
lto = "thin"
debug = true

[dependencies]
sled = { version = "0.25.0", features = ["compression"] }
rocksdb = "0.12.3"
jemallocator = "0.3.2"
