[package]
name = "sled-vs-rocksdb"
version = "0.1.0"
authors = ["Pedro Bittencorut Arruda <pedrobittencourt@yahoo.com.br>"]
edition = "2018"

[profile.release]
lto = "thin"
debug = true

[dependencies]
sled = { version = "*", features = ["compression"], optional = true }
rocksdb = { version = "*", optional = true }
jemallocator = { version = "*", optional = true }

[features]
default = ["rocksdb"]
