[package]
name = "sled-vs-rocksdb"
version = "0.1.0"
authors = ["Pedro Bittencorut Arruda <pedrobittencourt@yahoo.com.br>"]
edition = "2021"

[profile.release]
lto = "thin"
# debug = true

[dependencies]
# sled = { version = "0.34.7", features = ["compression"], optional = true }
rocksdb = { version = "0.21.0", optional = true }
jemallocator = { version = "0.5.4", optional = true }

[features]
# default = ["sled"]
default = ["rocksdb"]
